Replaced instances of getLast() and removeLast()
These two commands are not in the version of java used on the virtual machine.

This is a fix for the prior commit.